# FEMaster

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  LICENSE.txt  README.md  THIRD_PARTY_NOTICES.txt  makefile  orient.py  orient_topo.py  run_this.py  test1.txt  test2.txt  transform.py
documentation/: .gitignore  biblio.bib  compile.bat  compile.sh  compile_documentation.sh  document.bcf  document.run.xml  document.tex  document.toc
examples/: README.md  run_all_examples.py  stiffness_1.txt_A.mtx  stiffness_1.txt_K.mtx  stiffness_1.txt_b.mtx
femaster_api/: README.md  pyproject.toml  setup.py
femaster_api/examples/: __init__.py  cantilever.py  geometry_meshing.py  solid_beam.py
femaster_api/femaster_api/: __init__.py  _version.py
femaster_api/femaster_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
femaster_api/femaster_api/backend/: __init__.py  femaster.py  result_reader.py  runner.py
femaster_api/femaster_api/export/: __init__.py  context.py  femaster_format.py  femaster_writer.py
femaster_api/femaster_api/export/serializers/: __init__.py  analysis.py  bcs.py  constraints.py  elements.py  features.py  fields.py  loads.py  materials.py  nodes.py  orientations.py  sections.py  sets.py  surfaces.py
femaster_api/femaster_api/importers/: __init__.py  femaster_reader.py
femaster_api/femaster_api/importers/femaster_deck/: __init__.py  commands_analysis.py  commands_geometry.py  commands_loads.py  commands_properties.py  parser.py  utils.py
femaster_api/femaster_api/model/: __init__.py  model.py  names.py
femaster_api/femaster_api/model/analysis/: __init__.py  buckling_step.py  constraint_method.py  eigenfrequency_loadcase.py  linear_buckling_loadcase.py  linear_static_loadcase.py  linear_transient_loadcase.py  loadcase_repository.py  modal_step.py  newmark_control.py  nonlinear_static_step.py  rayleigh_damping.py  solver_control.py  solver_device.py  solver_method.py  static_step.py  step_repository.py  time_control.py  topology_static_loadcase.py  topology_static_step.py  transient_step.py
femaster_api/femaster_api/model/constraints/: __init__.py  connector_constraint.py  connector_type.py  constraint_repository.py  coupling_constraint.py  coupling_type.py  rbm_constraint.py  tie_constraint.py
femaster_api/femaster_api/model/elements/: __init__.py  element.py  element_repository.py  element_topology.py
femaster_api/femaster_api/model/features/: __init__.py  feature_repository.py  point_mass.py
femaster_api/femaster_api/model/fields/: __init__.py  field.py  field_domain.py  field_repository.py
femaster_api/femaster_api/model/loads/: __init__.py  amplitude.py  amplitude_interpolation.py  inertial_load.py  load_collector.py  load_collector_repository.py  load_repository.py  nodal_force.py  pressure_load.py  surface_traction.py  thermal_load.py  volume_load.py
femaster_api/femaster_api/model/materials/: __init__.py  abd_elasticity.py  generalized_isotropic_elasticity.py  isotropic_elasticity.py  material.py  material_repository.py  orthotropic_elasticity.py
femaster_api/femaster_api/model/nodes/: __init__.py  node.py  node_repository.py
femaster_api/femaster_api/model/orientations/: __init__.py  cylindrical_orientation.py  orientation_repository.py  orientation_type.py  rectangular_orientation.py
femaster_api/femaster_api/model/profiles/: __init__.py  profile_repository.py
femaster_api/femaster_api/model/sections/: __init__.py  beam_section.py  profile.py  section_repository.py  shell_section.py  solid_section.py  truss_section.py
femaster_api/femaster_api/model/sets/: __init__.py  element_set.py  entity_set.py  entity_type.py  member_ids.py  node_set.py  set_repository.py  surface_set.py
femaster_api/femaster_api/model/supports/: __init__.py  support.py  support_collector.py  support_collector_repository.py  support_repository.py
femaster_api/femaster_api/model/surfaces/: __init__.py  surface_definition.py  surface_repository.py
femaster_api/femaster_api/tools/: __init__.py  tovtk.py  tovtkhdf.py
femaster_api/femaster_api/tools/geometry/: __init__.py  tagging.py  vector.py
femaster_api/femaster_api/tools/geometry/base/: __init__.py  curve.py  curve_math.py  geometry_entity.py  point_entity.py  surface_entity.py  volume_entity.py
femaster_api/femaster_api/tools/geometry/curves/: __init__.py  arc.py  circle.py  joined_curve.py  line.py  polyline.py  spline.py
femaster_api/femaster_api/tools/geometry/meshing/: __init__.py  gmsh_mesher.py  gmsh_model_builder.py  gmsh_to_model.py
femaster_api/femaster_api/tools/geometry/surfaces/: __init__.py  face.py
femaster_api/femaster_api/tools/geometry/volumes/: __init__.py  volume.py
femaster_api/femaster_api/tools/tovtk/: __init__.py  hdf_grid.py  mesh_export.py  vtk_writer.py
femaster_api/femaster_api/tools/vtk_export/: __init__.py  api.py  cli.py  common.py  fields.py  mesh.py  report.py  writer_vtk.py  writer_vtkhdf.py
femaster_api/femaster_api/utils/: __init__.py  names.py
femaster_api/femaster_api/validation/: __init__.py  checks.py  diagnostics.py
femaster_api/tests/: test_examples.py  test_femaster_importer.py  test_geometry_tools.py  test_profiles_and_results.py  test_runner.py  test_smoke.py  test_tovtk.py  test_tovtk_cli.py  test_validation_collectors.py
femaster_api_old/: setup.py
fembridge/: __init__.py  buckling_bspline_run_20251027-155608-519611.yaml  buckling_bspline_run_20251027-155611-810287.yaml  buckling_bspline_run_20251027-155616-351177.yaml  buckling_bspline_run_20251027-155618-673701.yaml  buckling_bspline_run_20251027-155630-839180.yaml  buckling_bspline_run_20251027-155631-596888.yaml  buckling_bspline_run_20251027-155632-370229.yaml  buckling_bspline_run_20251027-155634-868767.yaml  buckling_bspline_run_20251027-155635-829410.yaml  buckling_bspline_run_20251027-155636-630879.yaml  buckling_bspline_run_20251027-155637-391520.yaml  buckling_bspline_run_20251027-155654-396923.yaml  buckling_bspline_run_20251027-155654-814080.yaml  buckling_bspline_run_20251027-155656-872431.yaml  (+1212 more)
fempy/: requirements.txt  (+1 more)
(+1296 files in other folders)
