[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "femaster-api"
version = "0.1.0"
description = "Clean Python modeling API and FEMaster deck/result bridge."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "FEMaster contributors"}]
license = {text = "Proprietary-compatible internal package; see repository license."}
keywords = ["finite-elements", "femaster", "preprocessing", "results"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["femaster_api*"]
